# NACC

./: .gitignore  JUDGES_SETUP.md  README.md  SUBMISSION.md  docker-compose.testnet.yml  examples.md  install.sh  node-config.yml  pyproject.toml  requirements.txt  setup.md  setup_nacc.sh  start_nacc.sh
configs/: node-config.example.yml  node-kali-vm.yml  node-laptop.yml  node-linux-vm.yml  node-windows-vm.yml  orchestrator-blaxel-gemini.yml  orchestrator-blaxel-openai.yml  orchestrator-config.example.yml  orchestrator-local-demo.yml  orchestrator-modal.yml  orchestrator-three-node.yml  orchestrator-vms.yml  orchestrator.yml  ui-config.example.yml  ui-modal.yml
docs/: AI-BACKEND-GUIDE.md  AI-BACKEND-SETUP.md  BACKEND-CONFIGURATION.md  BACKEND_INTEGRATION_COMPLETE.md  BLAXEL-COMPARISON.md  CHANGELOG.md  CONVERSATIONAL-UI.md  DEMO.md  HACKATHON-READY.md  MODAL-APP-INFO.md  MODAL-HIGH-SPEED-CONFIG.md  MODAL-TEST-RESULTS.md  MULTI-BACKEND-INTEGRATION.md  NACC-Quick-Reference.md  PRODUCTION-READY.md  PROJECT-INVENTORY.md  PROJECT-STATUS.md  PROJECT-UPDATE-SUMMARY.md  README-NEW.md  README_HACKATHON.md  SETUP-CHECKLIST.md  SYSTEM-READY.md  TEST-MODAL-A100.md  TESTING-RESULTS.md  UI-FIXES-COMPLETE.md  VM-SETUP-GUIDE.md  WINNING-STRATEGY.md  completion-plan.md  end-to-end-demo.md  node-discovery.md  phase1-milestone.md  scenario-multi-node.md
scripts/: deploy_to_kali.sh  full_demo.sh  start_demo_environment.sh  test_ai_routing.sh  test_kali_vm.sh  test_ui_backend.sh
tests/: test_cli_stubs.py  test_end_to_end.py  test_filesystem.py  test_orchestrator_config.py  test_tools.py  (+1 more)
(+32 files in other folders)
